[tool.poetry]
name = "app"
version = "0.1.1"
description = ""
authors = ["PuQing <me@puqing.work>"]
maintainers = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = { version = "^0.22.0", extras = ["standard"] }
gunicorn = "^21.2.0"
pydantic = { extras = ["email"], version = "^2.5.3" }
pydantic-settings = "^2"
yarl = "^1.9.2"
ujson = "^5.8.0"
httptools = "^0.6.0"
loguru = "^0.7.0"
sqlmodel = "^0.0.14"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = "^1.7.4"
emails = "^0.6"
python-multipart = "^0.0.6"
bcrypt = "^4.1.2"
jinja2 = "^3.1.3"


[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "~4.0.1"
mypy = "^1.1.1"
isort = "^5.11.4"
pre-commit = "^3.0.1"
wemake-python-styleguide = "^0.17.0"
black = "^22.12.0"
autoflake = "^1.6.1"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pytest-env = "^0.8.1"
httpx = "^0.23.3"

[tool.isort]
profile = "black"
multi_line_output = 3


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
