[tool.poetry]
name = "app"
version = "0.1.1"
description = ""
authors = ["PuQing <me@puqing.work>"]
maintainers = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = { version = "^0.22.0", extras = ["standard"] }
gunicorn = "^21.2.0"
pydantic = { extras = ["email"], version = "^2.5.3" }
pydantic-settings = "^2"
yarl = "^1.9.2"
ujson = "^5.8.0"
httptools = "^0.6.0"
loguru = "^0.7.0"
sqlmodel = "^0.0.14"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = "^1.7.4"
emails = "^0.6"
python-multipart = "^0.0.6"
bcrypt = "^4.1.2"
jinja2 = "^3.1.3"
tenacity = "^8.2.3"
raven = "^6.10.0"
celery = "^5.3.6"
toml = "^0.10.2"
psycopg = { extras = ["binary"], version = "^3.1.13" }
scrapy = "^2.11.0"
feedparser = "^6.0.11"


[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "~4.0.1"
pre-commit = "^3.0.1"
wemake-python-styleguide = "^0.17.0"
black = "^22.12.0"
pytest-cov = "^4.0.0"
anyio = "^4.2.0"
pytest-env = "^1.1.3"
httpx = "^0.26.0"
ruff = "^0.1.13"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.ruff.lint]
select = [
    # Pycodestyle
    "E",
    "W",

    # Pyflakes
    "F",

    # Isort
    "I",

    # Comprehensions
    "C4",

    # Debugger
    "T100",

    # Pyupgrade
    "UP",

    # NumPy-specific rules
    "NPY001",
    "NPY003",

    # Bugbear
    "B002",
    "B003",
    "B004",
    "B009",
    "B010",
    "B011",
    "B012",
    "B013",
    "B014",
    "B015",
    "B016",
    "B017",
    "B018",
    "B019",
    "B020",
    "B021",
    "B022",
    "B025",
    "B029",
    "B032",

    # Pylint
    "PLE",
    "PLC0414",
    "PLC3002",
    "PLR0206",
    "PLR0402",
    "PLR1701",
    "PLR1711",
    "PLR1722",
    "PLW3301",

    # Pygrep-hooks
    "PGH004",
]
unfixable = ["NPY001"]
ignore = [
    # Whitespace before ‘,’, ‘;’, or ‘:’, it is not compatible with black
    "E203",
    # Module level import not at top of file
    "E402",
    # Line too long (82 > 79 characters)
    "E501",
    # Do not compare types, use `isinstance()`
    "E721",
    # Do not use bare except, specify exception instead
    "E722",
    # Do not assign a lambda expression, use a def
    "E731",
    # Do not use variables named ‘l’, ‘O’, or ‘I’
    "E741",
    # `name` may be undefined, or defined from star imports: `module`
    "F405",
    # Local variable name is assigned to but never used
    "F841",
    # It not met the "Explicit is better than implicit" rule
    "UP015",
    # It will cause the performance regression on python3.10
    "UP038",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
